<resources>
    <string name="app_name" translatable="false">Aero Space Flight News</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="try_again">Try Again</string>
    <string name="unable_to_fetch_data_of_contents">Unable to fetch data of contents</string>

    <string name="title_settings">settings</string>
    <string name="title_delete_all">delete all</string>
    <string name="title_favorite">favorite</string>
    <string name="settings">Settings</string>
    <string name="button_back_settings">Button back settings</string>
    <string name="change_theme">Change theme</string>
    <string name="image_of_content">image of content</string>
    <string name="image_of_detail_articles">image of detail articles</string>
    <string name="image_of_detail_blogs">image of detail blogs</string>
    <string name="bookmarked_data_articles">data articles</string>
    <string name="source">Source: %s</string>
    <string name="author">Author: %s</string>
    <string name="published_at">Published at: %s</string>
    <string name="updated_at">Updated at: %s</string>
    <string name="click_here_for_more_details">Click here for more details</string>
    <string name="bookmarked_data_blogs">Bookmarked data blogs</string>
    <string name="loading_detail">Loading detail....</string>
    <string name="ok">OK</string>
    <string name="articles">Articles</string>
    <string name="blogs">Blogs</string>
    <string name="no_data_blogs_available_please_try_again_later">No data blogs available. Please try again later.</string>
    <string name="no_data_articles_available_please_try_again_later">No data articles available. Please try again later</string>
    <string name="change_language">Change Language</string>
    <string name="reload">reload</string>
    <string name="no_data_articles_available">No data articles available</string>
    <string name="no_data_blogs_available">No data articles blogs available</string>
    <string name="image_no_data_blogs_available">Image no data blogs available</string>
    <string name="image_no_data_articles_available">Image no data articles available</string>
    <string name="here_is_top_10_articles">Here is top 10 articles:</string>
    <string name="here_is_top_10_blogs">Here is top 10 blogs:</string>
    <string name="powered_by">powered by:</string>
    <string name="https_api_spaceflightnewsapi_net" translatable="false">https://api.spaceflightnewsapi.net</string>
    <string name="detail_blog_error">Detail Blog Error.</string>
    <string name="detail_article_error">Detail Article Error.</string>
    <string name="image_logo_dicoding">image logo dicoding</string>

    <string name="image_of_content_articles_or_blogs">image of content articles or blogs</string>
    <string name="and">and</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="image_carousel_content">image carousel content</string>
</resources>