<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".uiPresentation.splash.SplashScreenActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/img_splashscreen"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="rocket.json"
        app:lottie_loop="true" />

    <TextView
        android:id="@+id/txt_name_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/img_splashscreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/app_name"
        android:fontFamily="@font/mountella_trial_bold"
        android:textStyle="bold"
        android:textSize="20sp"
        style="@style/CustomColorTextStyle"/>

    <TextView
        android:id="@+id/txt_lbl_powered_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@id/txt_name_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/powered_by"
        android:textStyle="bold"
        android:textSize="16sp"
        style="@style/CustomColorTextStyle"/>

    <ImageView
        android:id="@+id/img_logo_dicoding"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:contentDescription="@string/image_logo_dicoding"
        app:layout_constraintTop_toBottomOf="@id/txt_lbl_powered_by"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/CustomImageSplash"/>

    <TextView
        android:id="@+id/txt_lbl_and"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/img_logo_dicoding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/and"
        android:textStyle="bold"
        android:textSize="16sp"
        style="@style/CustomColorTextStyle"/>

    <TextView
        android:id="@+id/txt_api_source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/txt_lbl_and"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/https_api_spaceflightnewsapi_net"
        android:textStyle="bold"
        android:textSize="16sp"
        style="@style/CustomColorTextStyle"/>





</androidx.constraintlayout.widget.ConstraintLayout>