<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_articles"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".uiPresentation.detailContents.DetailArticlesFragment">




    <include
        android:id="@+id/detail_loading_mask"
        layout="@layout/layout_loading_detail"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="gone" />

    <!-- Scrollable content -->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/contentDetail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">


            <TextView
                android:id="@+id/txt_title_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:maxLines="3"
                style="@style/CustomColorTextStyle"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="ESA Finally Kicks Off Flying Engine Testbed Project Following ITT Reissue" />


            <ImageView
                android:id="@+id/img_of_Content"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/image_of_detail_articles"
                android:scaleType="fitXY"
                android:src="@drawable/place_holder"
                app:layout_constraintTop_toBottomOf="@id/txt_title_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_favorite_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:contentDescription="@string/bookmarked_data_articles"
                android:tint="@color/white"
                android:src="@drawable/ic_star_unselected"
                android:enabled="false"
                app:layout_constraintTop_toBottomOf="@id/img_of_Content"
                app:layout_constraintEnd_toEndOf="parent" />


            <TextView
                android:id="@+id/txt_lbl_Source"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/source"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/img_of_Content"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/CustomColorTextStyle"/>

            <TextView
                android:id="@+id/txt_source"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                app:layout_constraintBaseline_toBaselineOf="@id/txt_lbl_Source"
                app:layout_constraintStart_toEndOf="@id/txt_lbl_Source"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="NASASpaceflight"
                style="@style/CustomColorTextStyle"/>


            <TextView
                android:id="@+id/txt_lbl_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/txt_lbl_Source"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/CustomColorTextStyle"/>

            <TextView
                android:id="@+id/txt_author"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                app:layout_constraintBaseline_toBaselineOf="@id/txt_lbl_author"
                app:layout_constraintStart_toEndOf="@id/txt_lbl_author"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="Aaron McCrea"
                style="@style/CustomColorTextStyle"/>


            <TextView
                android:id="@+id/txt_lbl_published_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/published_at"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/txt_lbl_author"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/CustomColorTextStyle"/>

            <TextView
                android:id="@+id/txt_published_at"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                app:layout_constraintBaseline_toBaselineOf="@id/txt_lbl_published_at"
                app:layout_constraintStart_toEndOf="@id/txt_lbl_published_at"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="2025-10-13"
                style="@style/CustomColorTextStyle"/>


            <TextView
                android:id="@+id/txt_lbl_updated_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/updated_at"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/txt_lbl_published_at"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/CustomColorTextStyle"/>

            <TextView
                android:id="@+id/txt_updated_at"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                app:layout_constraintBaseline_toBaselineOf="@id/txt_lbl_updated_at"
                app:layout_constraintStart_toEndOf="@id/txt_lbl_updated_at"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="2025-10-13"
                style="@style/CustomColorTextStyle"/>


            <TextView
                android:id="@+id/txt_summary_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:padding="8dp"
                app:layout_constraintTop_toBottomOf="@id/txt_lbl_updated_at"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="Numerous upgrades have been observed during NSF’s recent flyover..."
                style="@style/CustomColorTextStyle"/>


            <Button
                android:id="@+id/btn_to_detail_content_web"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/click_here_for_more_details"
                app:layout_constraintTop_toBottomOf="@id/txt_summary_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/CustomButtonStyle"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>